apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-deployment.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lette-backend
  labels:
    app: lette-backend
    app.kubernetes.io/name: lette-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lette-backend
  template:
    metadata:
      labels:
        app: lette-backend
    spec:
      containers:
        - name: lette-backend
          image: registry.asdf.ooo/lette-pocketbase:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          volumeMounts:
            - name: pb-data
              mountPath: /pb/pb_data
            - name: litestream-config
              mountPath: /etc/litestream.yml
              subPath: litestream.yml
      volumes:
        - name: pb-data
          persistentVolumeClaim:
            claimName: pb-data
        - name: litestream-config
          configMap:
            name: litestream
