apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lette-backend
  labels:
    app: lette-backend
spec:
  selector:
    app: lette-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8090
