apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-namecom
  name: lette-backend
spec:
  rules:
  - host: backend.lette.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: lette-backend
            port:
              number: 80
  tls:
  - hosts:
    - backend.lette.io
    secretName: lette-backend-cert
