apps/lette-backend/versions/1.0--1.0/manifests/lette-backend-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lette-backend-https
spec:
  parentRefs:
    - name: k8s01-lb01
      namespace: gateway
      sectionName: https-lette
  hostnames:
    - backend.lette.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lette-backend
          port: 80
